[package]
name = "actor-discord"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default= ["rust-tls"]
native-tls=["tokio-tungstenite/native-tls","tokio-tungstenite/tokio-native-tls","actix-http/openssl"]
rust-tls=["tokio-tungstenite/tokio-rustls","tokio-tungstenite/rustls-tls","tokio-tungstenite/rustls", "actix-http/rustls"]
[dependencies]
actix="0.12.0"
# actix-codec = "0.4.0"
actix-rt="2.2.0"
tokio-tungstenite = { version = "0.15.0"} #, features = ["connect", "stream"], default-features = true }
tokio = { version = "1.10", features = ["full"] }
log = "0.4.14"
dotenv="0.15.0"
env_logger = "0.9.0"
anyhow = "1.0"
thiserror = "1.0.28"
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr="0.1.7"
url="2"
actix-http={version = "3.0.0-beta.9", features=["rustls"]}
awc={ version="3.0.0-beta.7", features=["rustls","tls-rustls"]}
actix-broker = "0.4.1"
rustls="0.19.1"
#webpki = "0.21"
webpki-roots="0.21.0"
futures-util = "0.3.17"
bitflags = "1.1"
regex="1.5.4"
lazy_static = "1.4.0"